--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,35 @@
 *{
     margin:0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .legfelsolec{
     display: flex;
-    min-height: 0;
     flex-direction: row;
     justify-content: center;
     max-height: 100px;
+    background-color: #f2f2f2;
+}
+
+.legfelsolec img{
+    max-height: 100px;
+}   
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #333;
+}
+
+.menu a{
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+}
+.menu a:hover{
+    background-color: #ddd;
+    color: black;
 }
