--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,10 @@ body{
 
 .nagykep img{
     width: 100%;
-    height: auto;
-    size: cover;
+    height: 700px;
+    object-fit: cover;
     opacity: 90%;
+    transition: 0.5s;
 }
 
 .nagykep img:hover{
@@ -62,4 +63,59 @@ body{
     transition: 0.5s;
 }
 
+.Fogadoforesz{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
 
+.Fogadoforesz .bal{
+    flex: 1;
+    padding: 20px;
+}
+
+.Fogadoforesz .bal p{
+    font-size:1.2rem;
+    line-height: 1.6;
+}
+
+.Fogadoforesz .jobb{
+    flex: 1;
+    padding: 20px;
+}
+
+.Fogadoforesz .jobb img {
+    max-width: 100%; 
+    height: auto; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.Fogadoforesz .jobb img:hover {
+    filter: brightness(1.2);
+    transition: 0.3s;
+}
+
+.balindex{
+    color: #2b1d0e;
+    font-weight: 550;
+}
+
+.bal h1{
+    font-weight: 700;
+    font-size: xx-large;
+    border-bottom: 4px solid #8b5a2b;
+    border-radius: 5px;
+}
+
+.balkisebb{
+    color: #2b1d0e;
+    font-style: normal;
+}
+
+.balidezet{
+    font-style: italic;
+}
