--- a/css/fooldal.css
+++ b/css/fooldal.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&display=swap');
-
 /* Fejléc alatti nagy rész, ami arra szolgál, hogy legyen egy nagy kép animációval */
 
 .nagykep img{
@@ -189,6 +187,83 @@
     font-size: 1.3rem;
 }
 
+/* kockás rész  */
+
+.Kocka{
+    margin: 0px;
+}
+
+.Kocka .fenti,.Kocka .also{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    min-height: 260px;
+}
+
+.Kocka .fenti{
+    background-color: #2b140f;
+    color: #e8d3aa;
+}
+
+.Kocka .also{
+    background-color: #f2e8d5;
+    color: #2c1810;
+}
+
+.Kocka .bal-kep, .Kocka .jobb-kep{
+    padding: 0;
+}
+
+.Kocka .bal-kep img, .Kocka .jobb-kep img{
+    width: 100%;
+    height: 100%;
+    min-height: 260px;
+    object-fit: cover;
+    display: block;
+    transition: 0.3s;
+}
+
+.Kocka .jobb-kep img:hover {
+    filter: brightness(1.2);
+    transition: 0.3s;
+}
+
+.Kocka .bal-kep img:hover {
+    filter: brightness(1.2);
+    transition: 0.3s;
+}
+
+
+.Kocka .jobb-szoveg, .Kocka .bal-szoveg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    padding: 36px 44px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    margin: 0 100px;
+    font-size: 1.05rem;
+    line-height: 1.7;
+}
+
+.Kocka .jobb-szoveg h1, .Kocka .bal-szoveg h1{
+    margin: 0;
+    font-size: 2.2rem;
+}
+
+.Kocka .jobb-szoveg p, .Kocka .bal-szoveg p{
+    margin: 0;
+}
+
+.Kocka .jobb-szoveg ul, .Kocka .bal-szoveg ul{
+    margin: 6px 0 0;
+    padding-left: 0;
+    list-style: none;
+    display: grid;
+    gap: 8px;
+}
+
 
 /* 980 pixelnél legyen jó */
 
@@ -217,5 +292,23 @@
 
     .kartya-kiemelt:hover{
         transform: translateY(-6px);
+    }
+
+    .Kocka .fenti, .Kocka .also{
+        grid-template-columns: 1fr;
+    }
+
+    .Kocka .jobb-szoveg, .Kocka .bal-szoveg{
+        padding: 28px 20px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .Kocka .also .jobb-kep{
+        order: 1;
+    }
+
+    .Kocka .also .bal-szoveg{
+        order: 2;
     }
 }
