--- a/css/rolunk.css
+++ b/css/rolunk.css
@@ -14,31 +14,135 @@
     padding-bottom: 10px;
 }
 
+
+/* TÖRTÉNET SZÁL  */
+
 .TortenetSzal{
     background-color: #d4c5a3;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+    align-items: flex-start;
     gap: 20px;
 }
 
-.TortenetSzal-Kep{
-    flex: 1;
+.TortenetSzal-Kep, .TortenetSzal-Szoveg{
+    flex: 1 1 50%;
     padding: 20px;
-    text-align: center;
 }
 
 .TortenetSzal-Kep img{
+    display: block;
     max-width: 100%;
     height: auto;
     border-radius: 10px;
 }
 
-.TortenetSzal-szoveg{
-    flex: 1;
-    padding: 20px;
+.Kep-alairas{
+    text-align: center;
+    font-style: italic;
+    color: #2b1d0e;
+    margin-top: 8px;
+}
+
+.TortenetSzal-Szoveg{
+    text-align: justify;
     color: #2b1d0e;
     font-size: 1.1rem;
     line-height: 1.6;
+    margin-right: 30px;
+    line-height: 2rem;
+    letter-spacing: 0.05rem;
+}
+
+.TortenetSzal-Szoveg h1{
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: #2c1810;
+    margin-bottom: 20px;
+    border-bottom: 3px solid #8b5a2b;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+.TortenetSzal-Szoveg p:first-of-type::first-letter {
+    font-size: 3.5rem; 
+    font-weight: bold; 
+    float: left; 
+    line-height: 1; 
+    margin-right: 10px; 
+    font-family: "Times New Roman", serif; 
+}
+
+/* FELSZOLGÁLÓK  */
+
+.Felszolgalok{
+    background-color: #2c1810;
+    padding: 70px 20px;
+    text-align: center;
+    border-top: #2c1810 3px solid;
+    color: #e8d3aa    ;
+}
+
+.Felszolgalok-cim{
+    font-size: 3rem;
+    color: #e8d3aa;
+    font-weight: 500;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.Felszolgalok-kisebb {
+    text-align: center;
+    font-size: 0.8rem;
+    margin-bottom: 60px;
+    margin-top: 20px;
+}
+
+.Felszolgalok-kartya-lista {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.Felszolgalok-kartya {
+    flex: 1 1 calc(33.333% - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.kartya-kep img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #b98f68;
+}
+
+.kartya-tartalom h1{
+    font-size: 1.5rem;
+    color: #e8d3aa;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+
+@media (max-width: 980px) {
+    .TortenetSzal {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .TortenetSzal-Kep, .TortenetSzal-Szoveg {
+        width: 100%;
+    }
+    .TortenetSzal-Kep img {
+        max-width: 80%;
+    }
+
+    .Felszolgalok-kartya {
+        flex: 1 1 100%;
+    }
 }
