--- a/css/rolunk.css
+++ b/css/rolunk.css
@@ -77,7 +77,7 @@
 
 .Felszolgalok{
     background-color: #2c1810;
-    padding: 70px 20px;
+    padding: 90px 20px;
     text-align: center;
     border-top: #2c1810 3px solid;
     color: #e8d3aa    ;
@@ -113,19 +113,70 @@
     text-align: center;
 }
 
-.kartya-kep img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 4px solid #b98f68;
+.kartya-kicsi{
+    color: #8b5a2b;
 }
 
-.kartya-tartalom h1{
+.kartya-leiras{
+    font-size: 0.9rem;
+    margin-top: 10px;
+    font-weight: 400;
+}
+
+.kartya-kep img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #b98f68;  
+}
+
+.kartya-tartalom h3{
     font-size: 1.5rem;
     color: #e8d3aa;
     margin-top: 15px;
     margin-bottom: 10px;
+    font-weight: 500;
+}
+
+/* Ház szabályai  */
+
+.HazSzabalyaiFo{
+    background-color: #d4c5a3;
+    padding: 70px 20px;
+}
+
+.HazSzabalyai{
+    align-items: center;
+    gap: 20px;
+    background-color:#f2e8d5;
+    border: 3px double #8b5a2b;
+    margin: 0 20%;
+    padding: 5%;
+}
+
+.HazSzabalyai-cim{
+    font-size: 2.5rem;
+    color: #2c1810;
+    margin-bottom: 20px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.szam {
+    font-size: 3rem; 
+    font-weight: 500;
+    color:#b98f68; 
+    float: left; 
+    line-height: 1.5; 
+    margin-right: 10px; 
+    font-family: "Times New Roman", serif; 
+}
+.HazSzabalyai h2{
+    font-size: 1.5rem;
+    color: #2c1810;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 
@@ -144,5 +195,8 @@
 
     .Felszolgalok-kartya {
         flex: 1 1 100%;
+    }
+    .HazSzabalyai{
+        margin: 0 10%;
     }
 }
