--- a/css/rolunk.css
+++ b/css/rolunk.css
@@ -23,6 +23,7 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
+    padding: 0 24px;
 }
 
 .TortenetSzal-Kep, .TortenetSzal-Szoveg{
@@ -49,7 +50,7 @@
     color: #2b1d0e;
     font-size: 1.1rem;
     line-height: 1.6;
-    margin-right: 30px;
+    margin-right: 0;
     line-height: 2rem;
     letter-spacing: 0.05rem;
 }
@@ -184,13 +185,31 @@
     .TortenetSzal {
         flex-direction: column;
         align-items: center;
+        padding: 0 20px;
     }
 
     .TortenetSzal-Kep, .TortenetSzal-Szoveg {
         width: 100%;
+        max-width: 760px;
+        margin: 0 auto;
+        padding: 20px 0;
     }
+
+    .TortenetSzal-Kep {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
     .TortenetSzal-Kep img {
-        max-width: 80%;
+        width: 100%;
+        max-width: 680px;
+        margin: 0 auto;
+    }
+
+    .TortenetSzal-Szoveg {
+        margin-right: 0;
     }
 
     .Felszolgalok-kartya {
