--- a/css/rolunk.css
+++ b/css/rolunk.css
@@ -50,7 +50,7 @@
     color: #2b1d0e;
     font-size: 1.1rem;
     line-height: 1.6;
-    margin-right: 0;
+    align-items: center;
     line-height: 2rem;
     letter-spacing: 0.05rem;
 }
@@ -65,13 +65,23 @@
     padding-bottom: 10px;
 }
 
-.TortenetSzal-Szoveg p:first-of-type::first-letter {
+.Szoveg-mese:first-of-type::first-letter {
     font-size: 3.5rem; 
     font-weight: bold; 
     float: left; 
     line-height: 1; 
     margin-right: 10px; 
     font-family: "Times New Roman", serif; 
+}
+
+.TortenetSzal-idezet {
+    background-color: #f2e8d5;
+    border-left: 4px solid #8b5a2b;
+    padding: 20px;
+    margin-top: 30px;
+    font-style: italic;
+    color: #2b1d0e;
+    font-size: 0.8rem;
 }
 
 /* FELSZOLGÁLÓK  */
@@ -154,6 +164,13 @@
     border: 3px double #8b5a2b;
     margin: 0 20%;
     padding: 5%;
+    rotate: 1.5deg;
+}
+
+.HazSzabalyai h2{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .HazSzabalyai-cim{
@@ -168,10 +185,11 @@
     font-size: 3rem; 
     font-weight: 500;
     color:#b98f68; 
-    float: left; 
     line-height: 1.5; 
+    display: inline-block;
     margin-right: 10px; 
     font-family: "Times New Roman", serif; 
+    float: left;
 }
 .HazSzabalyai h2{
     font-size: 1.5rem;
@@ -179,6 +197,8 @@
     margin-bottom: 10px;
     font-weight: bold;
 }
+
+
 
 
 @media (max-width: 980px) {
@@ -206,10 +226,6 @@
         width: 100%;
         max-width: 680px;
         margin: 0 auto;
-    }
-
-    .TortenetSzal-Szoveg {
-        margin-right: 0;
     }
 
     .Felszolgalok-kartya {
