--- a/css/ajanlatok.css
+++ b/css/ajanlatok.css
@@ -47,6 +47,17 @@
     border-width: 3px;
 }
 
+.kartya-kiemelt .elokelo{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #a31111;
+    color: #f2e8d5;
+    padding: 5px 10px;
+    font-size: 0.9rem;
+    font-weight: 700;
+} 
+
 .kartya-kep img{
     width: 100%;
     height: 250px;
@@ -145,6 +156,46 @@
     background-color: #a6784c;
 }
 
+/*Egyedi Ajánlat*/
+
+.EgyediAjanlat{
+    background-color: #4e2b1d;
+    padding: 60px 20px;
+    text-align: center;
+    border-top: #2c1810 3px solid;
+    color: #d4c5a3;
+}
+
+.EgyediAjanlat h2{
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.EgyediAjanlat p{
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    line-height: 1.6;
+    padding: 0 25%;
+}
+
+.EgyediAjanlat-gomb{
+    border: 2px solid #f2e8d5;
+    background-color: #4e2b1d ;
+    color: #f2e8d5;
+    width: 20%;
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.EgyediAjanlat-gomb:hover{
+    background-color: #f2e8d5;
+    color: #4e2b1d;
+}
+
 /* 980 pixelnél legyen jó */
 
 @media (max-width: 980px){
@@ -156,6 +207,9 @@
     .kartya, .kartya-kiemelt{
         width: min(150vw, 480px);
         transform: none;
+    }
+    .EgyediAjanlat p{
+        padding: 0 10%;
     }
 }
 
